[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "repl_python3_awcloud-cpanel"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "2.0.1"
PySocks = "^1.7.1"
cffi = "1.15.0"
cloudscraper = "1.2.58"
cryptography = "3.4.7"
grequests = "0.6.0"
python = "^3.8"
pytz = "2021.1"
replit = "3.2.0"
requests = "2.26.0"
[tool.poetry.dev-dependencies]
